--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Karl Roush- Digital Resume</title>
-        <!-- <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" /> -->
+        <title>Resume - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,41 +19,33 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
+                ><span class="d-block d-lg-none">Clarence Taylor</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Projects</a></li>
-					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
-		
-		
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0" text-transform: lowercase">Karl <span class="text-primary">Roush</span></h1>
-                    <div class="subheading mb-5">Atlanta, GA · (908) 415-9749 · <a href="mailto:karl.roush@gmail.com">karl.roush@gmail.com</a></div>
-                    <p class="lead mb-5">Currently pursuing a MS in Aerospace Engineering, with a focus on propulsion. Graduated highest honors, GT BS-AE 2020. An Eagle Scout with research experience with jet engine design (NPSS), system integration, machine learning, and infosec. Interests and continued learning in propulsion systems & information security. 
-					<br/><br/>
-					All of my publicly available data, documentations, and publications can be found at <a href="https://github.com/karoush"> github.com/karoush</a></p>
+                    <h1 class="mb-0">Karl <span class="text-primary">Roush</span></h1>
+                    <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · <a href="mailto:name@email.com">name@email.com</a></div>
+                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
-						<a class="social-icon" href="https://karoush.github.io/Roush_Resume.pdf"><i class="fab fa-readme"></i></a>
-                        <a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a>
-						<a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-						<a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="#"><i class="fab fa-github"></i></a><a class="social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-			
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -93,16 +85,15 @@
                 </div>
             </section>
             <hr class="m-0" />
-			
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Georgia Institute of Technology </h3>
+                            <h3 class="mb-0">University of Colorado Boulder</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Aerospace Engineering</div>
+                            <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
