--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Resume - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/jetEngine.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -21,7 +21,9 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
+                ><span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block">
+				<!-- <h3>Karl Roush</h3> -->
+				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -41,16 +43,20 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-0">Karl <span class="text-primary">Roush</span></h1>
-                    <div class="subheading mb-5">Atlanta, GA · (908) 415-9479 · <a href="mailto:karl.roush@gmail.com">karl.roush@gmail.com</a></div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <h1 class="mb-0">Karl <span class="text-primary2">Roush</span></h1>
+                    <div class="subheading mb-5" style="margin-bottom: -0.5rem;text-transform: capitalize;">Atlanta, GA · (908) 415-9479 · <a href="mailto:karl.roush@gmail.com" style="color:#7FA4C9;text-transform: lowercase;">karl.roush@gmail.com</a></div>
+					<h4> <i><div style="margin-top: -1rem;"> Research, Leadership, Service </div></i> </h4>
+                    <p class="lead mb-5">Currently pursuing a MS in Aerospace Engineering, with a focus on propulsion. Graduated highest honors, GT BS-AE 2020. An Eagle Scout with research experience with jet engine design (NPSS), system integration, machine learning, and infosec. Interests and continued learning in propulsion systems & information security. 
+					<br/><br/>
+					All of my publicly available data, documentations, and publications can be found at <a href="https://github.com/karoush">github.com/karoush</a></p>
                     <div class="social-icons">
-                        <a class="social-icon" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a>
+                        <a class="social-icon" target="_blank" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a>
 						<a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/karoush"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Karl_Roush"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
+			
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
