minor nav bar updates

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
                 ><span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block">
-				<!-- <h3>Karl Roush</h3> -->
+				<h4>Karl Roush</h4>
 				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- <h4>Karl Roush</h4> -->
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
@@ -48,7 +49,7 @@
 					<h4> <i><div style="margin-top: -1rem;"> Research, Leadership, Service </div></i> </h4>
                     <p class="lead mb-5">Currently pursuing a MS in Aerospace Engineering, with a focus on propulsion. Graduated highest honors, GT BS-AE 2020. An Eagle Scout with research experience with jet engine design (NPSS), system integration, machine learning, and infosec. Interests and continued learning in propulsion systems & information security. 
 					<br/><br/>
-					All of my publicly available data, documentations, and publications can be found at <a href="https://github.com/karoush">github.com/karoush</a></p>
+					I'm always looking for new projects- let's connect on the social media!</p>
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a>
 						<a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/karoush"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Karl_Roush"><i class="fab fa-twitter"></i></a>
