--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
                     <ul class="fa-ul mb-0">
 						<li><span class="fa-li"><i class="fas fa-user-graduate text-warning"></i></span>Graduated BS-AE in three years, Highest Honors</li>
 						<li><span class="fa-li"><i class="fas fa-list-alt text-warning"></i></span>Dean's list, every semester</li>
+						<li><span class="fa-li"><i class="fas fa-microscope text-warning"></i></span>UTSR Gas Turbine Industrial Fellow (2019)</li>
                         <br/>
 						<li><span class="fa-li"><i class="fas fa-feather-alt text-warning"></i></span>Eagle Scout Rank Award, Bronze Palm and Gold Palm</li>
                         <li><span class="fa-li"><i class="fas fa-file-code text-warning"></i></span>Wells Fargo Campus Analytics Challenge Winner 2019</li>
