background image testing

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+			<span class="d-block d-lg-none">Karl Roush</span><span class="d-none d-lg-block">
 				<h4>Karl Roush</h4>
-				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a
-            ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+				<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <!-- <h4>Karl Roush</h4> -->
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -43,7 +43,7 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
-            <section class="resume-section" id="about">
+            <section class="resume-section bgimg_roush" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Karl <span class="text-primary2">Roush</span></h1>
                     <div class="subheading mb-5" style="margin-bottom: -0.5rem;text-transform: capitalize;">Atlanta, GA · (908) 415-9479 · <a href="mailto:karl.roush@gmail.com" style="color:#7FA4C9;text-transform: lowercase;">karl.roush@gmail.com</a></div>
