--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Georgia Institute of Technology</h3>
                             <div class="subheading mb-3">Oxford Study Abroad Program</div>
-                            <p style="margin-top: -0.75rem">>Had the opportunity to travel throughout Europe and gain international experience and a global perspective.
+                            <p style="margin-top: -0.75rem">Had the opportunity to travel throughout Europe and gain international experience and a global perspective.
 							Split into 5 weeks of travel around Europe, followed by 6 weeks of residence in Oxford, UK. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>May 2018 - August 2018</b></span></div>
