--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 					</div>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 						<div class="flex-grow-1">
-							<a href="https://github.gatech.edu/kroush7/AE4803_PRO17/blob/master/4803report_Martin-Roush.pdf">
+							<a href="https://github.com/karoush/readingArchive/blob/master/4803report_Martin-Roush.pdf">
 							<div class="subheading mb-3" style="text-transform: capitalize;">Engine Component Prelimary Design
 								<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 									<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
@@ -341,14 +341,15 @@
                     </div>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-						<!-- <a href="#"> <!-- Add link if NDA expires--> 
+						<a href="https://github.com/karoush/WF_CAC_2018/blob/master/REPORT_KarlR_WellsFargo-CampusAnalyticsChallenge.pdf"> 
+						<!-- Mutual Nondisclosure Agreement, Section 4 allows for my work to be made public, one year after it was signed. For the 2018 Challenge this is on or after November 15, 2019. --> 
                             <div class="subheading mb-3" style="text-transform: capitalize;">Lifestyle Importance Weighted Carbon Footprint Reduction
-						<!--<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+						<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
 								<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
-							</svg> -->
+							</svg>
 							</div>
-							<!-- </a> -->
+							</a>
 							<ul style="margin-top: -1rem; margin-bottom: -2.5rem;">
 								<li>Wells Fargo Campus Analytics Challenge 2018 winner</li>
 								<li>Built a machine learning model that recommends lifestyle changes to minimize carbon footprint without affecting life quality</li>
@@ -356,7 +357,23 @@
 							</ul>
                         </div>
                     </div>
-					
+					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+						<a href="https://github.com/karoush/position_presence/blob/master/Positional%20Presence%20patch%2010-22.pdf">
+                            <div class="subheading mb-3" style="text-transform: capitalize;">Positional Presence
+						<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+								<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
+							</svg>
+							</div>
+							</a>
+							<ul style="margin-top: -1rem; margin-bottom: -2.5rem;">
+								<li>Spent two days learning from scratch how to use the Riot Games API</li>
+								<li>Built a tool to determine the relative differences in role presence at an apex competitive level in the game League of Legends and compare across regions</li>
+								<li>Used statistical analysis to demonstrate the relative agency of each role and the difference in playstyles from regions ranging from North America to Korea</li>
+							</ul>
+                        </div>
+                    </div>
 					
 					<h3 style="margin-top: 4rem">Multidisciplinary </h3>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
