--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <section class="resume-section bgimg_roush" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Karl <span class="text-primary2">Roush</span></h1>
-                    <div class="subheading mb-5" style="margin-bottom: -0.5rem;text-transform: capitalize;">Atlanta, GA · (908) 415-9479 · <a href="mailto:karl.roush@gmail.com" style="color:#7FA4C9;text-transform: lowercase;">karl.roush@gmail.com</a></div>
+                    <div class="subheading mb-5" style="margin-bottom: -0.5rem;text-transform: capitalize;">Atlanta, GA · <a href="mailto:karl.roush@gmail.com" style="color:#7FA4C9;text-transform: lowercase;">karl.roush@gmail.com</a></div>
 					<h4> <i><div style="margin-top: -1rem;"> Leadership, Research, Service </div></i> </h4>
                     <p class="lead mb-5">Currently pursuing a MS in Aerospace Engineering, with a focus on propulsion. Graduated highest honors, Georgia Tech BS-AE 2020. 
 					An Eagle Scout with experience with jet engine design (NPSS), systems integration/fabrication, AI/ML, and infosec. 
