minor updates to mindsumo section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
                             <h3 class="mb-0">Competitive Innovation Consultant </h3>
                             <div class="subheading mb-3"> <span style="text-transform: capitalize"><i>MindSumo:</i></span> A <span style="text-transform: lowercase">competitive problem-solving platform</span> </div>
 							<ul>
-								<li>Ranked in the top 5 of 350,000+ solvers</li>
-								<li>Chosen as a winner for 93% of competitions (Mindsumo All-Star average= 20%) </li>
+								<li>Ranked #3 of 350,000+ solvers</li>
+								<li>Ranked 3rd Overall, 1st in Engineering, 1st in Science</li>
+								<li>Chosen as a winner for 93% of competitions (Mindsumo All-Star average= 20%)</li>
 								<a href="https://www.mindsumo.com/user/karlroush">
 								<li>Awarded wins from AAA, Mozilla, NASA, Siemens, GSK, et. al
 									<svg class="bi bi-arrow-up-right-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
