--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fabrication Lead- Aerospace Systems Design Laboratory</h3>
-                            <div class="subheading mb-3" style="text-transform: capitalize;"><i>Air Force Research Lab:</i> Aerospace Propulsion Outreach Program</div>
+                            <div class="subheading mb-3" style="text-transform: capitalize;"><i>Air Force Research Lab: </i> Aerospace Propulsion Outreach Program</div>
 							<ul>
 								<li>AFRL engineering and university outreach design competition using the Jet Cat P100-RX engine </li>
 								<li>Responsible for the creation of all components for both testing and final design on the APOP team. </li>
@@ -85,18 +85,18 @@
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Competitive Innovation Consultant </h3>
-                            <div class="subheading mb-3"> <span style="text-transform: capitalize"><i>MindSumo:</i></span> A <span style="text-transform: lowercase">competitive problem-solving platform</span> </div>
+                            <a href="https://www.mindsumo.com/user/karlroush">
+							<div class="subheading mb-3"> <span style="text-transform: capitalize"><i>MindSumo: </i></span>A <span style="text-transform: lowercase">competitive problem-solving platform</span> 
+								<svg class="bi bi-arrow-up-right-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+									<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+									<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
+								</svg>
+							</div>
+							</a>
 							<ul>
 								<li>Ranked in the top 5 of 350,000+ solvers</li>
 								<li>Chosen as a winner for 93% of competitions (Mindsumo All-Star average= 20%) </li>
-								<a href="https://www.mindsumo.com/user/karlroush">
-								<li>Awarded wins from AAA, Mozilla, NASA, Siemens, GSK, et. al
-									<svg class="bi bi-arrow-up-right-square" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-										<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-										<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
-									</svg>
-								</a>
-								</li>
+								<li>Awarded wins from AAA, Mozilla, NASA, Siemens, GSK, et. al</li>
 							</ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>August 2018 - Present</b></span></div>
@@ -106,7 +106,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">UTSR Gas Turbine Industrial Fellowship</h3>
 							<a href="https://www2.swri.org/www2/utsr/pastfellows.htm">
-                            <div class="subheading mb-3" style="text-transform: capitalize;"><i>Southwest Research Institute:</i> <span style="text-transform: none">Department of Energy, Office of Fossil Energy</span>
+                            <div class="subheading mb-3" style="text-transform: capitalize;"><i>Southwest Research Institute: </i> <span style="text-transform: none">Department of Energy, Office of Fossil Energy</span>
 								<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 									<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
 									<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
