--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 							<ul>
 								<li>Ranked in the top 5 of 350,000+ solvers</li>
 								<li>Chosen as a winner for 93% of competitions (Mindsumo All-Star average= 20%) </li>
+								<li>Ranked 3rd Overall, 1st in Engineering, 1st in Science</li>
 								<li>Awarded wins from AAA, Mozilla, NASA, Siemens, GSK, et. al</li>
 							</ul>
                             </div>
