--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <h3 class="mb-0">Georgia Institute of Technology</h3>
                             <div class="subheading mb-3">Oxford Study Abroad Program</div>
                             <p style="margin-top: -0.75rem">Program to study and learn first-hand through the lens of multiple European cultures.
-							Split into 5 weeks of travel around Europe (music and arts focus), followed by 6 weeks of residence in Oxford, UK (AE focus). </p>
+				    <br/>Split into 5 weeks of travel around Europe (music and arts focus), followed by 6 weeks of residence in Oxford, UK (AE focus). </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>May 2018 - August 2018</b></span></div>
                     </div>
