--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 					<h3> Aerospace </h3>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 						<div class="flex-grow-1">
-							<div class="subheading mb-3" style="text-transform: capitalize;">Jet Engine Cycle Anaylsis &amp; Optimization
+							<div class="subheading mb-3" style="text-transform: capitalize;">Jet Engine Cycle Analysis &amp; Optimization
 							</div></a>
 							<ul style="margin-top: -1rem; margin-bottom: -2.5rem;">
 								<li>Off-design cycle analysis of a separate flow turbofan in NPSS</li>
