--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
                     <h1 class="mb-0">Karl <span class="text-primary2">Roush</span></h1>
                     <div class="subheading mb-5" style="margin-bottom: -0.5rem;text-transform: capitalize;">GRA, Georgia Tech  ·  (706) 873-1987  ·  <a href="mailto:karl.roush@gmail.com" style="color:#7FA4C9;text-transform: lowercase;">karl.roush@gmail.com</a></div>
 					<h4> <i><div style="margin-top: -1rem;"> Leadership, Research, Service </div></i> </h4>
-                    <p class="lead mb-5">Eagle Scout currently pursuing a MS in Aerospace Engineering, with a focus on propulsion.
+                    <i><p class="lead mb-5">Eagle Scout currently pursuing a MS in Aerospace Engineering, with a focus on propulsion.</i>
+					<br/>
 					BS/MS Aerospace Engineering graduating with Highest Honors in 3 years; research experience with jet engines, drones, & hands-on shop fabrication.
-					Current work in hypersonics, smart airports, space based ISR, & aircraft emissions. Interests + learning in MBSE, QE, ML/AI, and information security.
+					Current work in hypersonics, smart airports, space based ISR, & aircraft emissions. <br/>Interests + learning in MBSE, QE, ML/AI, and information security.
 					<br/><br/>
 					I'm always looking for new projects- let's connect on social media!</p>
 				
