--- a/index.html
+++ b/index.html
@@ -466,7 +466,14 @@
 					<h3 style="margin-top: 4rem">Multidisciplinary </h3>
 					<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3" style="text-transform: capitalize;">Titanfall Smart Pistol MK5</div>
+                            <a target="_blank" href="./assets/img/titanfall_mk5_v1.png">
+                            <div class="subheading mb-3" style="text-transform: capitalize;">Titanfall Smart Pistol MK5
+						<svg class="bi bi-arrow-up-right-square" width="0.75em" height="0.75em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+								<path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+								<path fill-rule="evenodd" d="M10.5 5h-4a.5.5 0 0 0 0 1h2.793l-4.147 4.146a.5.5 0 0 0 .708.708L10 6.707V9.5a.5.5 0 0 0 1 0v-4a.5.5 0 0 0-.5-.5z"/>
+							</svg>
+							</div>
+							</a>
 							<ul style="margin-top: -1rem; margin-bottom: -2.5rem;">
 								<li>Designed, modeled, and constructed a replicate Titanfall Smart Pistol MK5</li>
 								<li>ABS plastic components with 1,820+ hours of 3D printing time</li>
