--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 							<ul style="margin-top: -1rem; margin-bottom: -2.5rem;">
 								<li>Designed, modeled, and constructed a replicate Titanfall Smart Pistol MK5</li>
 								<li>ABS plastic components with 1,820+ hours of 3D printing time</li>
-								<li>Currenlty, re-designing with tighter tolerances and embedded electronics</li>
+								<li>Currently re-designing with tighter tolerances and embedded electronics</li>
 							</ul>
                         </div>
                     </div>
