--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 						<a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/karoush"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Karl_Roush"><i class="fab fa-twitter"></i></a>
                     </div>
 					<br/>
+					I made this site solo & without spell check, so feel free to roast me via email if you find problems.
 					<p id="mod"> </p>
                 </div>
             </section>
