--- a/index.html
+++ b/index.html
@@ -217,12 +217,11 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Georgia Institute of Technology</h3>
-                            <div class="subheading mb-3">Master of Science, Aerospace Engineering</div>
-                            <p style="margin-top: -0.75rem">GPA: 4.00
-							<br/>
+                            <h3 class="mb-0">Master of Science, Aerospace Engineering</h3>
+                            <div class="subheading mb-0" style="text-transform: none">Georgia Institute of Technology</div>
+                            <p>
 							Continuation of GT's AE BS/MS honor program, under the Aerospace Systems Design Lab
-							<br/>Research work in hypersonics, space based ISR, smart airports, & aircraft emissions.</p>
+							<br/>Research work in hypersonics, space based ISR, smart airports, & aviation emissions.</p>
 							<div class="row">
 								<div class="col-sm">
 									<p style="margin-bottom: -0.2rem"><b>Methods</b></p>
@@ -247,14 +246,15 @@
 					
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Georgia Institute of Technology</h3>
-                            <div class="subheading mb-3">Bachelor of Science, Aerospace Engineering</div>
-                            <p style="margin-top: -0.75rem">GPA: 3.80, Graduated with Highest Honors, &Sigma;&Gamma;&Tau; Honor Society
-							<br/> AE BS/MS Honor Program 
+                            <h3 class="mb-0">Bachelor of Science, Aerospace Engineering</h3>
+                            <div class="subheading mb-0" style="text-transform: none">Georgia Institute of Technology</div>
+							<!-- style="margin-top: -0.75rem"-->
+                            <p>Graduated with Highest Honors in three years
+							<br/> &Sigma;&Gamma;&Tau; Honor Society, AE BS/MS Honor Program 
 							<br/> * indicates graduate level course</p>
 							<div class="row">
 								<div class="col-sm">
-									<p style="margin-bottom: -0.2rem"><b>Propulsion</b></p>
+									<p style="margin-bottom: -0.2em"><b>Propulsion</b></p>
 									<ul>
 										<li>Propulsion System Design*</li>
 										<li>Advanced Aircraft Propulsion</li>
@@ -318,10 +318,10 @@
 					
 					<div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Georgia Institute of Technology</h3>
-                            <div class="subheading mb-3">Oxford Study Abroad Program</div>
-                            <p style="margin-top: -0.75rem">Program to study and learn first-hand through the lens of multiple European cultures.
-				    <br/>Split into 5 weeks of travel around Europe (music and arts focus), followed by 6 weeks of residence in Oxford, UK (AE focus). </p>
+                            <h3 class="mb-0">Oxford University</h3>
+                            <div class="subheading mb-0" style="text-transform: none">Georgia Institute of Technology, Study Abroad Program</div>
+                            <p>Program to study and learn first-hand through the lens of multiple European cultures.
+							<br/>5 weeks of travel around Europe (music and arts focus), 6 weeks of residence in Oxford (AE focus). </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>May 2018 - August 2018</b></span></div>
                     </div>
