--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Karl Roush- Digital Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/img/jetEngine.ico" />
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
@@ -32,8 +32,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills & Certs</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li> -->
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#involvement">Involvement</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sponges">Spare Time Sponges</a></li>
                 </ul>
@@ -481,24 +481,52 @@
 			<!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-3">Skills</h2>
+					<div class="row">
+						<div class="col-sm">
+						<div class="subheading mb-0">Awards</div>
+							<ul class="fa-ul mb-0">
+							<li><span class="fa-li"><i class="fas fa-user-graduate text-warning"></i></span>Graduated BS-AE in three years, Highest Honors</li>
+							<li><span class="fa-li"><i class="fas fa-list-alt text-warning"></i></span>Dean's list, every semester</li>
+							<li><span class="fa-li"><i class="fas fa-microscope text-warning"></i></span>UTSR Gas Turbine Industrial Fellow (2019)</li>
+							<br/>
+							<li><span class="fa-li"><i class="fas fa-feather-alt text-warning"></i></span>Eagle Scout Rank Award, Bronze Palm and Gold Palm</li>
+							<li><span class="fa-li"><i class="fas fa-file-code text-warning"></i></span>Wells Fargo Campus Analytics Challenge Winner 2019</li>
+							<li><span class="fa-li"><i class="fas fa-file-code text-warning"></i></span>Wells Fargo Campus Analytics Challenge Winner 2018</li>
+							<li><span class="fa-li"><i class="fas fa-satellite text-warning"></i></span>International Best Use of Data- NASA Space Apps Hackathon (2016)</li>
+							<!-- <li><span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Eagle Scout Rank Award, Bronze Palm and Gold Palm</li> -->
+							</ul>
+						</div>
+						<div class="col-sm">
+						<div class="subheading mb-0">Certifications</div>
+							<ul class="fa-ul mb-0">
+							<li><span class="fa-li"><i class="fas fa-bolt text-warning"></i></span>Class 4 Laser Safety Certified</li>
+							<li><span class="fa-li"><i class="fas fa-tools text-warning"></i></span>AE Machine Shop Certified</li>
+							</ul>
+							<br/>
+							<div class="subheading mb-0">Soft Skills</div>
+							<ul class="fa-ul mb-0">
+							<li><span class="fa-li"><i class="fas fa-users text-warning"></i></span>Leadership</li>
+							<li><span class="fa-li"><i class="fas fa-plane-departure text-warning"></i></span>Logistics</li>
+							<li><span class="fa-li"><i class="fas fa-parachute-box text-warning"></i></span>Acquisition</li>
+							<li><span class="fa-li"><i class="fas fa-comment-dots text-warning"></i></span>German (ILR-2) </li>
+							</ul>
+						</div>
+					</div>
+					<br/>
+					
 					<div class="row">
 						<div class="col-sm">
 						<div class="subheading mb-3">Engineering Tools</div>
 						<ul style="margin-top: -0.75rem;">
-						<!-- <ul class="fa-ul mb-0"> -->
-							<!-- <li>
-								<span class="fa-li"><i class="fas fa-check"></i></span>Mobile-First, Responsive Design
-							</li> -->
 							<li>Numerical Propulsion System Simulation (NPSS)</li>
-							<li>SolidWorks</li>
-							<li>MATLAB</li>
+							<li>C++, MATLAB</li>
+							<li>SolidWorks, Inventor</li>
 							<li>XFOIL and AVL</li>
 							<li>OpenVSP</li>
 							<li>Multidisciplinary design optimization</li>
 							<li>Mill, lathe, band saw, drill press, sanders</li>
 							<li>3D Printing</li>
-							<li>Adobe Premiere Pro, Photoshop</li>
 						</ul>
 						</div>
 						
@@ -513,12 +541,11 @@
 							<li class="list-inline-item"><i class="fab fa-git-square"></i></li> <!-- Git -->
 							<!-- need a way to add MATLAB icon -->
 						</ul>
-						<div class="subheading mb-3">Soft skills</div>
+						<div class="subheading mb-3">Design</div>
 						<ul style="margin-top: -1rem;">
-							<li>Leadership</li>
-							<li>Logistics management</li>
-							<li>Systems integration</li>
-							<li>German, Latin: ILR Level 2 fluency</li>
+							<li>Adobe Photoshop</li>
+							<li>Adobe Premiere Pro, After Effects</li>
+							<li>Blender</li>
 						</ul>
 						</div>
 					</div>
@@ -526,7 +553,8 @@
             </section>
             <hr class="m-0" />
 
-            <!-- Awards-->
+            <!-- Awards -->
+			<!--
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
@@ -539,14 +567,14 @@
                         <li><span class="fa-li"><i class="fas fa-file-code text-warning"></i></span>Wells Fargo Campus Analytics Challenge Winner 2019</li>
                         <li><span class="fa-li"><i class="fas fa-file-code text-warning"></i></span>Wells Fargo Campus Analytics Challenge Winner 2018</li>
                         <li><span class="fa-li"><i class="fas fa-satellite text-warning"></i></span>International Best Use of Data- NASA Space Apps Hackathon (2016)</li>
-                        <!-- <li><span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Eagle Scout Rank Award, Bronze Palm and Gold Palm</li> -->
-						<br/> <!-- https://fontawesome.com/icons?d=gallery -->
+                        <li><span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>Eagle Scout Rank Award, Bronze Palm and Gold Palm</li> 
+						<br/> 
 						<li><span class="fa-li"><i class="fas fa-bolt text-warning"></i></span>Class 4 Laser Safety Certified (expires Jan 2021)</li>
 						<li><span class="fa-li"><i class="fas fa-tools text-warning"></i></span>AE Machine Shop Certified</li>
                     </ul>
                 </div>
             </section>
-			<hr class="m-0" />
+			<hr class="m-0" /> -->
 			
 			<!-- involvement-->
             <section class="resume-section" id="involvement">
