--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 						</svg> </a>
 					<br/>HyTech Racing is an award-winning student-run organization at the Georgia Institute of Technology dedicated to furthering students' engineering experience through the rigorous design and development of Formula Student electric vehicles.</p>
 				
-					<div class="subheading mb-3">Eagles@GT</div>
+					<div class="subheading mb-3">Scouting at GT</div>
                     <p style="margin-top: -1.2rem;"><i>Georgia Tech club for Scouts</i>						
 					<br/>
 					A group for former Boy Scouts and Girl Scouts to continue their scouting lives at Georgia Tech by initiating and taking part in adventure and service opportunities. We work to give back to the community.</p>
