Commented out PhD work

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
 					
-					<div class="d-flex flex-column flex-md-row justify-content-between mb-4">
+<!-- 					<div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">PhD, Aerospace Engineering</h3>
                             <div class="subheading mb-0" style="text-transform: none">Georgia Institute of Technology</div>
@@ -260,7 +260,7 @@
 							<br/> </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>December 2021 - <i> Present</i></b></span></div>
-                    </div>
+                    </div> -->
 					
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                         <div class="flex-grow-1">
