--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             <h3 class="mb-0">Master of Science, Aerospace Engineering</h3>
                             <div class="subheading mb-0" style="text-transform: none">Georgia Institute of Technology</div>
                             <p>
-							Continuation of GT's AE BS/MS honor program, under the Aerospace Systems Design Lab
+							Capstone work: "Development of a Modular, Python-Based Architecture for the Environmental Design Space (EDS)"- creating a modular test bed for preliminary aircraft design explorations
 							<br/>Research work in hypersonics, space based ISR, smart airports, & aviation emissions.</p>
 							<div class="row">
 								<div class="col-sm">
