--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<br/> From ground-level work on test setups, jet & rocket engines to high-flying research in hypersonics, satellites, & aircraft emissions, my work is out of this world!
 						If I'm not out biking, you can catch me learning more about systems design, ML/AI, and cybersecurity.
 						<br/><br/>• • •<br/>
-						<br/>Currently working as an Engineer at Aerojet Rocketdyne while pursuing a PhD-AE at Georgia Tech.
+						<br/>Currently working as an <b>Project/Component Engineer in Turbomachinery</b> on the RS-25 engine @Aerojet Rocketdyne.
 						All of my publicly available data, documentations, and publications can be found at <a href="https://github.com/karlroush">github.com/karoush</a>
 					
 					
