--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<!-- <h4> <i><div> Leadership, Research, Service </div></i> </h4> -->
                     <p class="lead mb-5">
 						Aerospace Engineer dedicated to advancing humanity's return to the moon!✈🚀🛰
-						<br/> Ground-level work on test rigs and assembly to high-flying research in hypersonics, satellites, & aircraft emissions.
+						<br/> Ground-level work on test rigs and assembly w/ high-flying research in hypersonics, satellites, & aircraft emissions.
 						<br/> Avid bike and Onewheel enthusiast always learning more about ML/AI, systems sustainment planning, and cybersecurity. 
 						<br/><br/>• • •<br/>
 						<br/><b>Active: </b>Project/Component Engineer, High Pressure Turbomachinery @Aerojet Rocketdyne.
