--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					
 					<div class="social-icons">
                     <!-- <div class="social-icons" style="margin-top: -1em;"> -->
-                        <a class="social-icon" target="_blank" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a>
+                        <!-- <a class="social-icon" target="_blank" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a> -->
 						<a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a>
 						<a class="social-icon" href="https://github.com/karlroush"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Karl_Roush"><i class="fab fa-twitter"></i></a>
 						<a class="social-icon" href="mailto:karl@karlroush.com"><i class="fa fa-envelope"></i></a>
