Minor typographical changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h4> <i><div style="margin-top: -2rem;"> Advancing humanity's return to the Moon through engineering excellence and innovative thinking. </div></i></h4>
 					<!-- <h4> <i><div> Leadership, Research, Service </div></i> </h4> -->
                     <p class="lead mb-5">
-						Project/Component Engineer for the SLS main engine turbopumps + PhD on long-duration operational and sustainment considerations for aerospace programs. My prior work spans hydrogen propulsion, hypersonics modeling, satellite constellations, and emissions reduction technologies—always staying ahead in today’s fast-changing tech landscape.
+						Project/Component Engineer for the Space Launch System (SLS) main engine turbopumps + PhD on long-duration operational and sustainment considerations for aerospace programs. My prior work spans hydrogen propulsion, hypersonics modeling, satellite constellations, and emissions reduction technologies—always staying ahead in today’s fast-changing tech landscape.
 						<br/><br/>• • •<br/>
 						<br/><b>Active: </b>Component Project Engineer, RS-25 Turbomachinery @Aerojet Rocketdyne.
 						<br/><b>Concurrent: </b>Outside aerospace, I lead 417-DevOps, teaching AI/ML and app development through creative, gaming-inspired approaches.
