--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
 					
 					<div class="social-icons">
                     <!-- <div class="social-icons" style="margin-top: -1em;"> -->
-                        <!-- <a class="social-icon" target="_blank" href="./assets/KRoush_Resume.pdf"><i class="fab fa-readme"></i></a> -->
 						<a class="social-icon" href="https://www.linkedin.com/in/karl-roush/"><i class="fab fa-linkedin-in"></i></a>
-						<a class="social-icon" href="https://github.com/karlroush"><i class="fab fa-github"></i></a><a class="social-icon" href="https://twitter.com/Karl_Roush"><i class="fab fa-twitter"></i></a>
+						<a class="social-icon" href="https://github.com/karlroush"><i class="fab fa-github"></i></a>
+						<a class="social-icon" href="https://bsky.app/profile/karlroush.bsky.social"><i class="fab fa-twitter"></i></a>
 						<a class="social-icon" href="mailto:karl@karlroush.com"><i class="fa fa-envelope"></i></a>
                     </div>
 					<br/>
-					Have feedback? Reach out via <a href="mailto:feedback@karlroush.com?subject=Website Feedback">feedback@karlroush.com</a>
 					<p id="mod"> </p>
                 </div>
             </section>
