--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 						<a class="social-icon" href="https://github.com/karlroush"><i class="fab fa-github"></i></a>
 						<a class="social-icon" href="https://bsky.app/profile/karlroush.bsky.social"><i class="fab fa-twitter"></i></a>
 						<a class="social-icon" href="mailto:karl@karlroush.com"><i class="fa fa-envelope"></i></a>
+						<a class="social-icon" target="_blank" href="./assets/KRoush_resume-standard.pdf"><i class="fab fa-readme"></i></a>
                     </div>
 					<br/>
 					<p id="mod"> </p>
