added headline clarification

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						𝗕𝗿𝗶𝗱𝗴𝗶𝗻𝗴 𝗶𝗻𝗻𝗼𝘃𝗮𝘁𝗶𝗼𝗻 𝗮𝗻𝗱 𝗲𝘅𝗲𝗰𝘂𝘁𝗶𝗼𝗻 𝗮𝗰𝗿𝗼𝘀𝘀 𝗰𝗿𝗶𝘁𝗶𝗰𝗮𝗹 𝘀𝗽𝗮𝗰𝗲 𝗺𝗶𝘀𝘀𝗶𝗼𝗻𝘀 𝗮𝗻𝗱 𝘀𝘆𝘀𝘁𝗲𝗺𝘀. -->
 					<!-- <h4> <i><div> Leadership, Research, Service </div></i> </h4> -->
                     <p class="lead mb-5">
-						Currently Senior System Quality Engineer for NASA’s Lunar Lander and radiation-hardened power electronics – leading our first AS9100 certification, supplier quality, and root-cause analysis across the full product lifecycle.
+						Currently Senior System Quality Engineer @Draper for NASA’s Lunar Lander and radiation-hardened power electronics – leading our first AS9100 certification, supplier quality, and root-cause analysis across the full product lifecycle.
 						<br/><br/>
 						Previously: Component Engineer for RS-25 turbopumps on SLS, with a PhD in long-duration sustainment strategies. Earlier R&D in hydrogen propulsion, hypersonics, satellite constellations, and emissions-reduction technologies.
 						<br/><br/>• • •<br/>
