update headline text
clean up of verbiage related to Draper work

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 						𝗕𝗿𝗶𝗱𝗴𝗶𝗻𝗴 𝗶𝗻𝗻𝗼𝘃𝗮𝘁𝗶𝗼𝗻 𝗮𝗻𝗱 𝗲𝘅𝗲𝗰𝘂𝘁𝗶𝗼𝗻 𝗮𝗰𝗿𝗼𝘀𝘀 𝗰𝗿𝗶𝘁𝗶𝗰𝗮𝗹 𝘀𝗽𝗮𝗰𝗲 𝗺𝗶𝘀𝘀𝗶𝗼𝗻𝘀 𝗮𝗻𝗱 𝘀𝘆𝘀𝘁𝗲𝗺𝘀. -->
 					<!-- <h4> <i><div> Leadership, Research, Service </div></i> </h4> -->
                     <p class="lead mb-5">
-						Currently Senior System Quality Engineer @Draper for NASA’s Lunar Lander and radiation-hardened power electronics – leading our first AS9100 certification, supplier quality, and root-cause analysis across the full product lifecycle.
+						Current: Senior System Quality Engineer @Draper working on NASA's Lunar Lander program and radiation-hardened power electronics across the full product lifecycle.
 						<br/><br/>
-						Previously: Component Engineer for RS-25 turbopumps on SLS, with a PhD in long-duration sustainment strategies. Earlier R&D in hydrogen propulsion, hypersonics, satellite constellations, and emissions-reduction technologies.
+						Previous: Component Engineer for RS-25 turbopumps on SLS, with a PhD in long-duration sustainment strategies. Earlier R&D in hydrogen propulsion, hypersonics, satellite constellations, and emissions-reduction technologies.
 						<br/><br/>• • •<br/>
 						<!-- <br/><b>Active: </b> Senior Component Project Engineer, RS-25 Turbomachinery @Aerojet Rocketdyne. -->
 						
@@ -106,8 +106,8 @@
 							</a>
 							<ul>
 								<li>Comprehensive quality assurance across product lifecycle, driving root cause analysis, vendor management, and strategic improvements in manufacturing processes </li>
-								<li>Spearheading inaugural AS9100 certification program to establish rigorous quality management frameworks in early-stage production  </li>
-								<li>NASA Lunar Lander development + radiation-hardened microelectronics for space power applications, leading cross-functional quality initiatives </li>
+								<li>Leading small sat electronics and space power production transition </li>
+								<li>NASA CLPS Lunar Lander development + supplier management </li>
 							</ul>
                             </div>
                         <div class="flex-shrink-0"><span class="text-primary"><b>June 2025 - Present </b></span></div>
